--- a/transit_vis/input_widget.ipynb
+++ b/transit_vis/input_widget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b2c089437ea4bdeb116ab3e9553fb5b",
+       "model_id": "bc19014ddedb426d8cc40078e6cf0ccb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bc5ca3d613e46e5a784cbd63cf5ff56",
+       "model_id": "d1b2d3e0cbd04a42b58ec4e9a7e96832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,6 +45,48 @@
     }
    ],
    "source": [
+    "#creates function which dictates outputs based off textbox intput and button \"clicks\"\n",
+    "def btn_execute_app(obj): \n",
+    "    with output:\n",
+    "        clear_output()\n",
+    "        \n",
+    "        if len(destination_loc.value) < 1:\n",
+    "            raise ValueError(\"Please enter a value for your destination.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(commute_time.value) < 1:\n",
+    "            raise ValueError(\"Please enter a value for your desired commute time.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(min_rent_input_box.value) < 1:\n",
+    "            raise ValueError(\"Please enter a value for your minimum desired rent.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if len(max_rent_input_box.value) < 1:\n",
+    "            raise ValueError(\"Please enter a value for your maximum desired rent.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if commute_time.value.isdecimal() == False:\n",
+    "            raise ValueError(\"Your commute time input is not valid, please enter a whole number.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if min_rent_input_box.value.isdecimal() == False:\n",
+    "            raise ValueError(\"Your minimum rent value input is not valid, please enter a whole number.\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        if max_rent_input_box.value.isdecimal() == False:\n",
+    "            raise ValueError(\"Your maximum rent value input is not valid, please enter a whole number.\")\n",
+    "        else:\n",
+    "            pass     \n",
+    "\n",
+    "        print(\"The outputs need to be linked as filters for the geoJSON maps\")\n",
+    "\n",
     "#creates destination input box\n",
     "destination_loc = widgets.Text( \n",
     "    placeholder='Enter Destination Location',\n",
@@ -84,13 +126,8 @@
     "# creates a clickable button to execute a fucntion based off inputs \n",
     "app_btn = widgets.Button(description='Execute Search', layout=Layout(width=\"380px\", height=\"auto\"))\n",
     "\n",
-    "# function which executes upon app_button being clicked, will perform input tests/verifications \n",
+    "# function which executes upon app_button being clicked executes tests/verifications \n",
     "## as well as filter and output the map\n",
-    "def btn_execute_app(obj): \n",
-    "    with output:\n",
-    "        clear_output()\n",
-    "        print(destination_loc.value, commute_time.value, min_rent_input_box.value, max_rent_input_box.value, \\\n",
-    "              \", these objects based off the inputs can now be used to filter the map\")\n",
     "    \n",
     "app_btn.on_click(btn_execute_app)\n",
     "\n",
@@ -128,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
