Widget will generate map URL and generate thresholds from inputted income data

--- a/transit_vis/input_widget_with_ValueErrors_modules.ipynb
+++ b/transit_vis/input_widget_with_ValueErrors_modules.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37f98aa0ce814408aa112b2092469339",
+       "model_id": "e1005917b8044666b8614343fa807d4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,7 +41,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12f11063ea104b968ad534a088f3988c",
+       "model_id": "1c65c8ca11b04caabb2820e276038e7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,19 +222,27 @@
     "            seattle_tracts_df['mean_income'] = pd.to_numeric(\\\n",
     "                                                 seattle_tracts_df['mean_income'],\\\n",
     "                                                 errors='coerce')\n",
+    "            \n",
+    "            seattle_tracts_df['mean_income'] = seattle_tracts_df['mean_income']/1000\n",
+    "            \n",
     "            seattle_tracts_df = seattle_tracts_df.dropna()    \n",
+    "                     \n",
     "            seattle_tracts = folium.Choropleth(\n",
     "                geo_data=f\"{census_file}.geojson\",\n",
     "                name='Socioeconomic Data',\n",
     "                data=seattle_tracts_df,\n",
     "                columns=['GEO_ID', 'mean_income'], \n",
-    "                threshold_scale=[0, 50000, 60000, seattle_tracts_df[\"mean_income\"].max()+1],\n",
+    "                # added thresholding values for coloring based off widget inputs\n",
+    "                threshold_scale=[seattle_tracts_df[\"mean_income\"].min()-1, \\\n",
+    "                                 int(min_income_input_box.value)/1000, \\\n",
+    "                                 int(max_income_input_box.value)/1000, \\\n",
+    "                                 seattle_tracts_df[\"mean_income\"].max()+1],\n",
     "                key_on='feature.properties.GEOID10',\n",
     "                fill_color=\"PuBuGn\",\n",
     "                #fill_color='PuBu',\n",
     "                fill_opacity=0.7,\n",
     "                line_opacity=0.4,\n",
-    "                legend_name='mean income')\n",
+    "                legend_name='mean income (1000s)')\n",
     "\n",
     "\n",
     "            # Draw map using the speeds and census data\n",
