widet adds a marker to map based off destination location and thresholds chloropleth based off income entries

--- a/transit_vis/input_widget_with_ValueErrors_modules.ipynb
+++ b/transit_vis/input_widget_with_ValueErrors_modules.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1005917b8044666b8614343fa807d4e",
+       "model_id": "caaafe2334ae4691a4279b72a3b02822",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Text(value='', description='Destination: ', layout=Layout(height='auto', width='380px'), placeh…"
+       "VBox(children=(Text(value='47.606209, -122.332069', description='Destination: ', layout=Layout(height='auto', …"
       ]
      },
      "metadata": {},
@@ -41,7 +41,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c65c8ca11b04caabb2820e276038e7e",
+       "model_id": "4c77e2af9af4411190b9e0034cc52d9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,6 +223,7 @@
     "                                                 seattle_tracts_df['mean_income'],\\\n",
     "                                                 errors='coerce')\n",
     "            \n",
+    "            # mde the number smaller so the legend would look better\n",
     "            seattle_tracts_df['mean_income'] = seattle_tracts_df['mean_income']/1000\n",
     "            \n",
     "            seattle_tracts_df = seattle_tracts_df.dropna()    \n",
@@ -243,8 +244,15 @@
     "                fill_opacity=0.7,\n",
     "                line_opacity=0.4,\n",
     "                legend_name='mean income (1000s)')\n",
-    "\n",
-    "\n",
+    "            \n",
+    "            #Create folium marker based off destination\n",
+    "            dest_lat = float(destination_loc.value.split(\",\")[0])\n",
+    "            dest_long = float(destination_loc.value.split(\" \")[1])            \n",
+    "            dest_marker = folium.Marker(\n",
+    "                location=[dest_lat, dest_long], \n",
+    "                popup=\"Destination\", \n",
+    "                icon=folium.Icon(color=\"green\", icon=\"info-sign\"))\n",
+    "            \n",
     "            # Draw map using the speeds and census data\n",
     "            f_map = folium.Map(\n",
     "                location=[47.606209, -122.332069],\n",
@@ -252,6 +260,7 @@
     "                prefer_canvas=True)\n",
     "            seattle_tracts.add_to(f_map)\n",
     "            kcm_routes.add_to(f_map)\n",
+    "            dest_marker.add_to(f_map)\n",
     "            colormap.caption = 'Average Speed (m/s)'\n",
     "            colormap.add_to(f_map)\n",
     "            folium.LayerControl().add_to(f_map)\n",
@@ -419,7 +428,8 @@
     "\n",
     "#creates destination input box\n",
     "destination_loc = widgets.Text( \n",
-    "    placeholder='Enter Destination Location',\n",
+    "    value=\"47.606209, -122.332069\",\n",
+    "    placeholder='Enter Destination Location in \"lat, long\"',\n",
     "    description='Destination: ',\n",
     "    disabled=False,\n",
     "    style = {'description_width': 'initial'},\n",
@@ -470,13 +480,6 @@
     "display(input_box)\n",
     "display(output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
