Updated import * to specific functions

--- a/widget_generate_transit_vis_map.ipynb
+++ b/widget_generate_transit_vis_map.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import *\n",
+    "from ipywidgets import Button, Text\n",
     "from IPython.display import display, clear_output\n",
     "import os\n",
     "import json\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "156f2c6facd24cb3b20e324054f1676d",
+       "model_id": "bcfd38d95f5f40559bf404a8ee6a3d24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d73819cf881545cbadde4d6cfbf05cc4",
+       "model_id": "716a01c1578440899da9fe3d3415a26e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +234,7 @@
     "    layout=Layout(width=\"380px\", height=\"auto\") # \"40px\"\n",
     ")\n",
     "\n",
-    "# creates a clickable button to execute a fucntion based off inputs \n",
+    "# creates a clickable button to execute a function based off inputs \n",
     "app_btn = widgets.Button(description='Generate Map', layout=Layout(width=\"380px\", height=\"auto\"))\n",
     "\n",
     "# function which executes upon app_button being clicked and executes verifications\n",
