Adjusted ipywidget imports and output clearance

--- a/widget_generate_transit_vis_map.ipynb
+++ b/widget_generate_transit_vis_map.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import Button, Text\n",
+    "from ipywidgets import Output, VBox, Button, Layout, Text, widgets\n",
     "from IPython.display import display, clear_output\n",
     "import os\n",
     "import json\n",
@@ -16,18 +16,18 @@
     "import boto3\n",
     "import branca.colormap as cm\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import transit_vis.src.config as cfg\n",
-    "\n",
     "import transit_vis.src.transit_vis as transit_vis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creates function which dictates outputs based off textbox intput and button \"clicks\"\n",
+    "# Creates function which dictates outputs based off textbox intput and button \"clicks\"\n",
     "def generate_folium_map_widget(segment_file, census_file, colormap):\n",
     "    \"\"\"Draws together speed/socioeconomic data to create a Folium map.\n",
     "\n",
@@ -51,11 +51,20 @@
     "    \"\"\"\n",
     "    # Read in route shapefile and give it the style function above\n",
     "    kcm_routes = folium.GeoJson(\n",
-    "        f\"{segment_file}_w_speeds_tmp.geojson\",\n",
+    "        name='King Country Metro Speed Data',\n",
+    "        data=f\"{segment_file}_w_speeds_tmp.geojson\",\n",
     "        style_function=lambda feature: {\n",
-    "            'color': colormap(feature['properties']['AVG_SPEED_M_S']),\n",
-    "            'weight': 2})\n",
-    "\n",
+    "            'color': 'gray' if feature['properties']['AVG_SPEED_M_S'] == 0 \\\n",
+    "                else colormap(feature['properties']['AVG_SPEED_M_S']),\n",
+    "            'weight': 1 if feature['properties']['AVG_SPEED_M_S'] == 0 \\\n",
+    "                else 3},\n",
+    "        highlight_function=lambda feature: {\n",
+    "            'fillColor': '#ffaf00', 'color': 'blue', 'weight': 6},\n",
+    "        tooltip=folium.features.GeoJsonTooltip(\n",
+    "            fields=['ROUTE_NUM', 'AVG_SPEED_M_S',\n",
+    "                    'ROUTE_ID', 'LOCAL_EXPR', 'HISTORIC_SPEEDS'],\n",
+    "            aliases=['Route Number', 'Most Recent Speed (m/s)',\n",
+    "                     'Route ID', 'Local (L) or Express (E)', 'Previous Speeds']))\n",
     "\n",
     "    # Read in the census data/shapefile and create a choropleth based on income\n",
     "    seattle_tracts_df = pd.read_csv(f\"{census_file}_tmp.csv\")\n",
@@ -64,7 +73,7 @@
     "                                         seattle_tracts_df['mean_income'],\\\n",
     "                                         errors='coerce')\n",
     "\n",
-    "    # mde the number smaller so the legend would look better\n",
+    "    # Makes the numbers smaller so the legend would look better\n",
     "    seattle_tracts_df['mean_income'] = seattle_tracts_df['mean_income']/1000\n",
     "\n",
     "    seattle_tracts_df = seattle_tracts_df.dropna()    \n",
@@ -157,6 +166,8 @@
     "        speed_lookup,\n",
     "        segment_path)\n",
     "\n",
+    "        plt.close(\"all\")\n",
+    "        \n",
     "        # Create the color mapping for speeds\n",
     "        print(\"Generating map...\")\n",
     "        linear_cm = cm.LinearColormap(\n",
@@ -167,18 +178,18 @@
     "        f_map = generate_folium_map_widget(segment_path, census_path, linear_cm)\n",
     "        print(\"Saving map...\")\n",
     "        transit_vis.save_and_view_map(f_map, 'output_map_widgets.html')\n",
-    "\n"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcfd38d95f5f40559bf404a8ee6a3d24",
+       "model_id": "bfa761fd555a40d0a4fcbe3b346389e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "716a01c1578440899da9fe3d3415a26e",
+       "model_id": "1c73a23dcfa54d8fb40078610d6ef2d2",
        "version_major": 2,
        "version_minor": 0
       },
