Added Home Marker functionality to widget notebook

--- a/widget_generate_transit_vis_map.ipynb
+++ b/widget_generate_transit_vis_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creates function which dictates outputs based off textbox intput and button \"clicks\"\n",
+    "# Generates folium map based off census data, transportation data, and user inputs\n",
     "def generate_folium_map_widget(segment_file, census_file, colormap):\n",
     "    \"\"\"Draws together speed/socioeconomic data to create a Folium map.\n",
     "\n",
@@ -94,13 +94,21 @@
     "        line_opacity=0.4,\n",
     "        legend_name='mean income (x$1000)')\n",
     "\n",
-    "    # Creates folium marker based off destination\n",
+    "    # Creates folium marker based off destination latitude and longtitude\n",
     "    dest_lat = float(destination_loc.value.split(\",\")[0])\n",
     "    dest_long = float(destination_loc.value.split(\" \")[1])            \n",
     "    dest_marker = folium.Marker(\n",
     "        location=[dest_lat, dest_long], \n",
     "        popup=\"Destination\", \n",
     "        icon=folium.Icon(color=\"green\", icon=\"info-sign\"))\n",
+    "    \n",
+    "    # Creates folium marker based off home latitude and longtitude\n",
+    "    home_lat = float(home_loc.value.split(\",\")[0])\n",
+    "    home_long = float(home_loc.value.split(\" \")[1])            \n",
+    "    home_marker = folium.Marker(\n",
+    "        location=[home_lat, home_long], \n",
+    "        popup=\"Home\", \n",
+    "        icon=folium.Icon(color=\"red\", icon=\"info-sign\"))\n",
     "\n",
     "    # Draw map using the speeds and census data\n",
     "    f_map = folium.Map(\n",
@@ -110,11 +118,13 @@
     "    seattle_tracts.add_to(f_map)\n",
     "    kcm_routes.add_to(f_map)\n",
     "    dest_marker.add_to(f_map)\n",
+    "    home_marker.add_to(f_map)\n",
     "    colormap.caption = 'Average Speed (m/s)'\n",
     "    colormap.add_to(f_map)\n",
     "    folium.LayerControl().add_to(f_map)\n",
     "    return f_map\n",
     "\n",
+    "# Creates a function which dictates outputs based off textbox intput and button \"clicks\"\n",
     "def btn_execute_app(obj): \n",
     "    with output:\n",
     "        clear_output()\n",
@@ -142,7 +152,12 @@
     "        if max_income_input_box.value.isdecimal() == False:\n",
     "            raise ValueError(\"Your maximum income value input is not valid, please enter a whole number.\")\n",
     "        else:\n",
-    "            pass             \n",
+    "            pass\n",
+    "        \n",
+    "        if int(max_income_input_box.value) < int(min_income_input_box.value):\n",
+    "            raise ValueError(\"Maximum yearly income value must be greater than your minimum yearly income value.\")\n",
+    "        else:\n",
+    "            pass\n",
     "        \n",
     "        table_name='KCM_Bus_Routes'\n",
     "        s0801_path='./transit_vis/data/s0801'\n",
@@ -183,40 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfa761fd555a40d0a4fcbe3b346389e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Text(value='47.606209, -122.332069', description='Destination: ', layout=Layout(height='auto', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c73a23dcfa54d8fb40078610d6ef2d2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#creates destination input box\n",
+    "# Creates home input box\n",
+    "home_loc = widgets.Text( \n",
+    "    value=\"47.653834, -122.307858\",\n",
+    "    placeholder='Enter Home Location in \"lat, long\"',\n",
+    "    description='Home: ',\n",
+    "    disabled=False,\n",
+    "    style = {'description_width': 'initial'},\n",
+    "    layout=Layout(width=\"380px\", height=\"auto\") \n",
+    ")\n",
+    "\n",
+    "# Creates destination input box\n",
     "destination_loc = widgets.Text( \n",
     "    value=\"47.606209, -122.332069\",\n",
     "    placeholder='Enter Destination Location in \"lat, long\"',\n",
@@ -226,8 +222,7 @@
     "    layout=Layout(width=\"380px\", height=\"auto\") \n",
     ")\n",
     "\n",
-    "\n",
-    "# creates minimum income input box\n",
+    "# Creates minimum income input box\n",
     "min_income_input_box = widgets.Text(\n",
     "    placeholder='Enter minimum yearly income ($)',\n",
     "    description='Income Minimum:',\n",
@@ -236,7 +231,7 @@
     "    layout=Layout(width=\"380px\", height=\"auto\")\n",
     ")\n",
     "\n",
-    "# creates maximum income input box\n",
+    "# Creates maximum income input box\n",
     "max_income_input_box = widgets.Text(\n",
     "    placeholder='Enter maximum yearly income ($)',\n",
     "    description='Income Maximum:',\n",
@@ -245,18 +240,17 @@
     "    layout=Layout(width=\"380px\", height=\"auto\") # \"40px\"\n",
     ")\n",
     "\n",
-    "# creates a clickable button to execute a function based off inputs \n",
+    "# Creates a clickable button to execute a function based off inputs \n",
     "app_btn = widgets.Button(description='Generate Map', layout=Layout(width=\"380px\", height=\"auto\"))\n",
     "\n",
-    "# function which executes upon app_button being clicked and executes verifications\n",
-    "## as well as filter and output the map\n",
-    "    \n",
+    "# A function which executes upon app_button being clicked and executes verifications\n",
+    "## as well as filter and output the map    \n",
     "app_btn.on_click(btn_execute_app)\n",
     "\n",
-    "# combines all input boxes and widget together\n",
-    "input_box = VBox([destination_loc, min_income_input_box, max_income_input_box, app_btn])\n",
+    "# Combines all input boxes and widget together\n",
+    "input_box = VBox([home_loc, destination_loc, min_income_input_box, max_income_input_box, app_btn])\n",
     "\n",
-    "# assigns an output widget to display the output from the executed function and allow for overwriting\n",
+    "# Assigns an output widget to display the output from the executed function and allow for overwriting\n",
     "output = widgets.Output()\n",
     "\n",
     "display(input_box)\n",
